name: hellno
version: 0.0.1.1
license: LGPL-3
author: Danny B <danny.b.eml@gmail.com>
maintainer: Danny B <danny.b.eml@gmail.com>
stability: Alpha
cabal-version: >=1.10
build-type: Simple
category: Development
data-files:
    dummy.cabal_

executable hellno
    main-is: Main.hs
    other-modules:
        Hellno
        Hellno.Packages
        Hellno.Cabal
        Hellno.Core
        Hellno.CabalCache
    -- TODO: Make the depends more sane.
    build-depends:
        base >=4.5,
        process >=1.1,
        filepath >=1.0,
        directory >=1.0,
        Cabal >=1.14,
        transformers (>=0.2 && <0.5),
        containers (>=0.4 && <0.6),
        bytestring >=0.9,
        unix >=2.5,
        parsec >=3.1,
        composition >=1.0,
        temporary >= 1.2
    default-language: Haskell2010
